Fri Nov 21 10:03:26 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/datastructures.py,
	  xappy/doctests/indexerconnection_doctest1.txt,
	  xappy/doctests/indexerconnection_doctest2.txt,
	  xappy/doctests/indexerconnection_doctest3.txt,xappy/,
	  xappy/unittests/docbuild.py: Add shortcut interface for adding
	  fields to document (new UnprocessedDocument.append() and extend()
	  methods).  Add support for FieldGroups, used to group field data
	  instances together, to allow the summarisation code to return
	  fields associated to that which are relevant to the search (in
	  relevant_data()).

	  Changes datastructures on disk - stored documents now have an
	  extra key.  Should be backwards compatible (and this is tested) -
	  ie, new versions of xappy should be able to read old databases.
	  However, old versions of xappy won't be able to read databases
	  created by this version.

Tue Nov 18 22:40:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add support for slicing the
	  SearchResults object, as suggested in issue #25 by user "kapilt".
	* xappy/unittests/searchresults_slice.py: Add test for slicing the
	  SearchResults object.

Tue Nov 18 21:51:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Credit Michael Elsdörfer.
	* xappy/searchconnection.py: Add support for sorting by multiple
	  keys (inspired by the implementation supplied by Michael in issue
	  #24).
	* xappy/unittests/sort.py: Add Michael's test of sort by multiple
	  (and single) keys.

Tue Nov 18 21:45:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/distance.py: Add copyright header, and remove
	  unneccessary import of xapian.

Fri Oct 31 21:06:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to download new packages (11600).

Fri Oct 31 21:04:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
